--- a/Slack Files/FilesCollectionViewItem.xib
+++ b/Slack Files/FilesCollectionViewItem.xib
@@ -22,13 +22,13 @@
                 <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" id="njf-Q9-Q6E">
                     <rect key="frame" x="17" y="70" width="128" height="128"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyUpOrDown" id="8f7-X9-hj4"/>
+                    <imageCell key="cell" enabled="NO" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyUpOrDown" id="8f7-X9-hj4"/>
                 </imageView>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="D2S-P0-iRs">
                     <rect key="frame" x="15" y="45" width="132" height="17"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Title" id="hag-ym-ZBJ">
-                        <font key="font" metaFont="system"/>
+                    <textFieldCell key="cell" lineBreakMode="truncatingTail" enabled="NO" sendsActionOnEndEditing="YES" alignment="center" title="Title" id="hag-ym-ZBJ">
+                        <font key="font" metaFont="smallSystem"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
@@ -36,8 +36,8 @@
                 <textField identifier="FilesCollectionViewItem" horizontalHuggingPriority="251" verticalHuggingPriority="750" id="zRt-Bq-7cJ">
                     <rect key="frame" x="15" y="20" width="132" height="17"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Date" id="duF-CU-Qn5">
-                        <font key="font" metaFont="system"/>
+                    <textFieldCell key="cell" lineBreakMode="truncatingTail" enabled="NO" sendsActionOnEndEditing="YES" alignment="center" title="Date" id="duF-CU-Qn5">
+                        <font key="font" metaFont="smallSystem"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
