Make WindowController base class for all media window controllers. Add ImageWindowController. Have TextWindowController use a monospace font for code file types.

--- a/Slack Files/Window Controllers/TextWindowController.xib
+++ b/Slack Files/Window Controllers/TextWindowController.xib
@@ -15,28 +15,28 @@
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <window allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" restorable="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="F0z-JX-Cv5">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
-            <rect key="contentRect" x="196" y="240" width="480" height="270"/>
+            <rect key="contentRect" x="196" y="240" width="734" height="665"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1177"/>
             <view key="contentView" id="se5-gp-TjO">
-                <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
+                <rect key="frame" x="0.0" y="0.0" width="734" height="665"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <scrollView horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" id="XvX-b5-kho">
-                        <rect key="frame" x="20" y="20" width="440" height="230"/>
+                    <scrollView borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" horizontalScrollElasticity="none" id="XvX-b5-kho">
+                        <rect key="frame" x="-1" y="-1" width="736" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <clipView key="contentView" id="r4L-XX-E8H">
-                            <rect key="frame" x="1" y="1" width="423" height="228"/>
+                        <clipView key="contentView" copiesOnScroll="NO" id="r4L-XX-E8H">
+                            <rect key="frame" x="0.0" y="0.0" width="721" height="667"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
-                                <textView editable="NO" importsGraphics="NO" findStyle="panel" continuousSpellChecking="YES" allowsUndo="YES" verticallyResizable="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" dashSubstitution="YES" spellingCorrection="YES" smartInsertDelete="YES" id="rf1-Fg-vnq">
-                                    <rect key="frame" x="0.0" y="0.0" width="423" height="228"/>
+                                <textView editable="NO" drawsBackground="NO" importsGraphics="NO" richText="NO" horizontallyResizable="YES" findStyle="panel" continuousSpellChecking="YES" verticallyResizable="YES" allowsNonContiguousLayout="YES" linkDetection="YES" dataDetection="YES" spellingCorrection="YES" id="rf1-Fg-vnq">
+                                    <rect key="frame" x="0.0" y="0.0" width="736" height="667"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <size key="minSize" width="423" height="228"/>
-                                    <size key="maxSize" width="463" height="10000000"/>
+                                    <size key="minSize" width="721" height="667"/>
+                                    <size key="maxSize" width="749" height="10000000"/>
                                     <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                    <size key="minSize" width="423" height="228"/>
-                                    <size key="maxSize" width="463" height="10000000"/>
+                                    <size key="minSize" width="721" height="667"/>
+                                    <size key="maxSize" width="749" height="10000000"/>
                                 </textView>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -45,8 +45,8 @@
                             <rect key="frame" x="-100" y="-100" width="87" height="18"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
-                        <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="5qo-Jk-Iiu">
-                            <rect key="frame" x="424" y="1" width="15" height="228"/>
+                        <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="0.5" horizontal="NO" id="5qo-Jk-Iiu">
+                            <rect key="frame" x="721" y="0.0" width="15" height="667"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                     </scrollView>
@@ -55,7 +55,7 @@
             <connections>
                 <outlet property="delegate" destination="-2" id="0bl-1N-AYu"/>
             </connections>
-            <point key="canvasLocation" x="294" y="297"/>
+            <point key="canvasLocation" x="421" y="494.5"/>
         </window>
     </objects>
 </document>
