--- a/Slack Files/View Controllers/FilesCollectionViewItem.xib
+++ b/Slack Files/View Controllers/FilesCollectionViewItem.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="10117"/>
@@ -9,6 +9,7 @@
             <connections>
                 <outlet property="dateView" destination="zRt-Bq-7cJ" id="j6Y-t2-Iq2"/>
                 <outlet property="iconView" destination="njf-Q9-Q6E" id="jCH-hu-cfn"/>
+                <outlet property="sizeView" destination="4j5-b1-lqe" id="zt8-zp-eaq"/>
                 <outlet property="titleView" destination="D2S-P0-iRs" id="hCE-gS-jXj"/>
                 <outlet property="view" destination="Hz6-mo-xeY" id="0bl-1N-x8E"/>
             </connections>
@@ -34,9 +35,18 @@
                     </textFieldCell>
                 </textField>
                 <textField identifier="FilesCollectionViewItem" horizontalHuggingPriority="251" verticalHuggingPriority="750" id="zRt-Bq-7cJ">
-                    <rect key="frame" x="15" y="20" width="132" height="17"/>
+                    <rect key="frame" x="15" y="27" width="132" height="17"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <textFieldCell key="cell" lineBreakMode="truncatingTail" enabled="NO" sendsActionOnEndEditing="YES" alignment="center" title="Date" id="duF-CU-Qn5">
+                        <font key="font" metaFont="smallSystem"/>
+                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
+                <textField identifier="FilesCollectionViewItem" horizontalHuggingPriority="251" verticalHuggingPriority="750" id="4j5-b1-lqe">
+                    <rect key="frame" x="15" y="8" width="132" height="17"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                    <textFieldCell key="cell" lineBreakMode="truncatingTail" enabled="NO" sendsActionOnEndEditing="YES" alignment="center" title="Size" id="xd0-77-OnO">
                         <font key="font" metaFont="smallSystem"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
